styles.css
:root {
    --content-width: calc(1500px + 2rem);
    --off-white: #d9d7d7;
    --ligher-shade: rgba(255, 255, 255, .1);
    --lighest-shade: rgba(255, 255, 255, .2);

    --gradient-one: rgb(29,24,46);
    --gradient-two: rgb(38,22,46);
    --gradient-three: rgb(54,22,46);
    --gradient-four: rgb(75,22,46);
}

html
{
    scroll-behavior: smooth;
}

a
{
    color: var(--off-white);
    line-height: 1em;
    text-decoration: none;
}

p
{
    margin: 0;
}

body
{
    display: flex;
    justify-content: center;
    flex-direction: column;
    font-family: "Lato", Tahoma;
    color: var(--off-white);
    margin: 0;
    background: linear-gradient(-45deg, var(--gradient-three), var(--gradient-four), var(--gradient-one), var(--gradient-two));
    background-size: 400% 400%;
    animation: gradient 60s ease infinite;
    overscroll-behavior-x: none;
    align-items: center;

    > *
    {
        max-width: var(--content-width);
    }
}


@keyframes gradient
{
    0%
    {
        background-position: 0% 50%;
    }

    50%
    {
        background-position: 100% 50%;
    }

    100%
    {
        background-position: 0% 50%;
    }
}

::-webkit-scrollbar
{
    width: 10px;
}

/* Track */
::-webkit-scrollbar-track
{
    background: var(--gradient-one); 
}

/* Handle */
::-webkit-scrollbar-thumb
{
    background: rgb(255, 255, 255, .2); 
    border-radius: 5px;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover
{
    background: rgb(255, 255, 255, .5); 
}

#headshotHolder,
#introTextBox > div,
.bodySection > h1
{
    transition: .5s;
    filter: drop-shadow(8px 8px rgba(255, 255, 255, .05));
}

#headshotHolder:hover,
#introTextBox > div:hover,
.bodySection > h1:hover
{
    transform: translate(-2px,-2px);
    filter: drop-shadow(10px 10px var(--ligher-shade));
    transition: .5s;
}

#topBar{
    margin: 0 auto;
    width: 100%;
    height: 5rem;
    display: flex;
    justify-content: space-between;
    animation-delay: 2s;

    > *
    {
        height: 2em;
        line-height: 2em;
        padding: 0 1em;
        margin: 2em;
        transition: .25s;
        border-radius: 2em;
    }
}

#topBox{
    width: 100%;
    display: flex;
    min-height: 54vh;
    justify-content: center;
    align-items: center;
    align-content: center;
    flex-wrap: wrap-reverse;
    flex-direction: row;
    max-width: calc(1200px + 2rem);
    margin: 0 auto;

    #introTextBox
    {
        align-content: center;
        padding: 10px 30px;
        max-width: 700px;
    
        #introTitle
        {
            font-size: 60px;
            font-weight: bold;
            animation-delay: .75s;
        }
    
        #introDescription
        {
            font-size: 20px;
            line-height: 2rem;
            animation-delay: 1.5s;
        }

        #locationTitle
        {
            display: flex;
            align-items: center;
            animation-delay: 1.25s;
            flex-direction: row;
            margin: 4px 0 8px;
            height: 40px;

            #locationText
            {
                padding: 0 0 0 10px;
                font-size: 1.6em;
                height: 30px;
            }
        }
    }

    > #headshotHolder > img
    {
        clip-path: circle();
        width: 300px;
        height: 300px;
        border-radius: 50%;
        margin: 2rem;
        transition: .5s;
    }
}

#resumeDiv{
    width: 100%;
    display: flex;
    justify-content: center;
    flex-direction: column;
    gap: 1em;

    .bodySection
    {
        display: flex;
        justify-content: center;
        flex-direction: column;
        padding: 0 2em;

        .projectCard
        {
            display: flex;
            justify-content: center;
            flex-direction: column;
            border-radius: 22px;
            padding: 24px 32px 32px 32px;
            gap: 1em;
            background-color: var(--ligher-shade);
            margin: 0 0 4em 0;
            box-shadow: 8px 8px 0 var(--lighest-shade);
            transition: .5s;
            line-height: 32px;
            font-size: 20px;

            .cardTitleBox {
                font-size: 1.4em;
                display: flex;
                flex-direction: row;
                align-items: center;
                gap: .8em 1em;
                flex-wrap:wrap;

                h2 {
                    font-size: 1em;
                    font-weight: bold;
                    white-space: nowrap;
                    margin: 0;
                
                    > p
                    {
                        font-size: .7em;
                    }
                }
            
                > div {
                    border-radius: 22px;
                    font-size: 22px;
                    line-height: 1em;
                    background-color: var(--lighest-shade);
                    padding: .5em 1em;
                    height: 1em;
                    overflow:clip;
                    white-space: nowrap;
                }
            }

            .cardPhoto
            {
                max-height: auto;
                width: auto;
                border-radius: 22px;
            }

            .linkButtonBox {
                font-size: 22px;
                display: flex;
                flex-direction: row;
                flex-wrap: wrap;
            
                gap: 1em;
            
                > * {
                    background-color: var(--ligher-shade);
                    padding: .5em 1em;
                    border-radius: 2em;
                    transition: .25s;
                    height: 1em;
                }
            }
        }

        .projectCard:hover
        {
            box-shadow: 10px 10px 0 var(--lighest-shade);
            transform: translate(-2px,-2px);
            transition: .5s;
        }
    }
}

#pageFooter{
    display: flex;
    justify-content: space-between;
    padding: .5em 0;
    height: 3em;
    line-height: 3em;
    width: 100%;
    flex-direction: row;
    margin: 0 auto;

    > *
    {
        padding: 0 2em;
    }

    > a
    {
        display:flex;
        align-items: center;
    }

    & img{
        height: 2em;
        padding: 0 .5em;
    }
}

.projectCard > p,
.cardTitleBox > h2,
.cardTitleBox > div,
.projectCard > img
{
    transition: .5s;
}

.projectCard > p:hover,
.cardTitleBox > h2:hover,
.cardTitleBox > div:hover,
.projectCard > img:hover
{
    transform: translate(-1px,-1px);
    transition: .5s;
}

#contactSection
{
    > *
    {
        font-size: 22px;
        display: flex;
        align-items: center;
        padding: .5em;
        border-radius: 22px;
        height: 50px;
        transition: .25s;
    }
    
    > a > *
    {
        font-size: 36px;
        padding: 5px 15px 5px 5px;
    }

    & img{
        width: auto;
        height: 30px;
    }
}

.linkButtonBox > *:hover, 
#contactSection > *:hover, 
#contactMe:hover 
{
    box-shadow: 2px 2px 0 var(--off-white);
    transform: translate(-2px,-2px);
    background-color: var(--lighest-shade);
    transition: .15s;
}

.linkButtonBox > *:active, 
#contactSection > *:active, 
#contactMe:active 
{
    box-shadow: 0 0 0 var(--off-white);
    transform: translate(2px,2px);
    background-color: var(--lighest-shade);
    transition: .15s;
}

.animate,
.projectCard,
h1
{
    animation-duration: 1s;
    animation-delay: 0.5s;
    animation-name: animate-fade;
    animation-timing-function: cubic-bezier(.53,.26,.29,1.31);
    animation-fill-mode: backwards;
}

.animate.pop,
.projectCard,
h1
{
    animation-name: animate-pop;
}

h1,
.projectCard
{
    animation-delay: 2s;
}

@keyframes animate-pop
{
    0%
    {
        opacity: 0;
        transform: scale(0.95, 0.95);
        transform: translate(0,20px);
    }
    100%
    {
        opacity: 1;
        transform: scale(1, 1);
        transform: translate(0,0);
    }
}

#flip
{
    margin: 4px 0;
    height:80px;
    overflow:hidden;
    animation-delay: 1s;
    width: 100%;

    > div > div 
    {
        height: 80px;
        margin: 0;
        display:inline-block;
        white-space: nowrap;
    }

    div:first-child
    {
        animation: show 12s ease-out infinite;
        animation-delay: 5s;
    }
}


@keyframes show
{
    0% {margin-top:-240px;}
    10% {margin-top:-160px;}
    25% {margin-top:-160px;}
    35% {margin-top:-80px;}
    50% {margin-top:-80px;}
    60% {margin-top:0px;}
    99.99% {margin-top:0px;}
    100% {margin-top:-240px;}
}

.pin
{
    padding: 14px 0 0 0;
    height: 30px;

    > div
    {
        width: 4px;
        height: 4px;
        border: 5px solid var(--off-white);
        border-radius: 50%;
        position:relative;
    }
}

.pin > div::after
{
    content: '';
    width: 0px;
    height: 0px;
    bottom: -14.8px;
    left: -4px;
    border: 6px solid transparent;
    border-top: 10px solid var(--off-white);
    position:relative;
}

@media screen and (max-width : 600px)
{
    #introTitle
    {
        font-size: 6.5vmin;
    }

    #flip
    {
        height: 8vmin;
    }

    .bodySection
    {
        padding: 0;
    }

    h1
    {
        font-size: 7vmin;
        margin-left: auto;
        margin-right: auto;
    }

    h2
    {
        font-size: 5.4vmin;
        width: 100%;
    }

    #introDescription, .projectCard > p
    {
        font-size: 4.8vmin;
    }
}

